--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,7 +1,74 @@
 body {
-	font-family: sans-serif;
-
-	img {
-		width: 100%;
-	}
+	font-family: georgia, serif;
+	background: url('../images/chocolate-bar-bkg.jpg');
+	background-repeat: repeat-y;
+	background-size: cover;
+}
+html {
+	font-size: 10px;
+}
+h1 {
+	width: 750px;
+	padding: 25px;
+	border: 7px;
+	border-style: double;
+	border-color: rgb(171, 4, 82);
+	font-size: 4em;
+	color: rgb(171, 4, 82);
+	background-color: rgb(255, 181, 0);
+}
+h2 {
+	font-size: 3em;
+	color: rgb(171, 4, 82);
+}
+p {
+	font-size: 2em;
+	line-height: 1.5;
+	color: rgb(171, 4, 82);
+	background-color: rgb(255, 181, 0);
+	padding: 15px;
+	border: 7px;
+	border-style: dotted;
+	border-color: rgb(171, 4, 82);
+	width: 750px;
+	height: auto;
+}
+ul, ol {
+	font-size: 2em;
+	line-height: 1.7;
+	color: rgb(171, 4, 82);
+}
+article {
+	background-color: rgb(255, 181, 0);
+	margin: 10px;
+	padding: 15px;
+	border: 5px;
+	border-style: double;
+	border-color: rgb(171, 4, 82);
+}
+section {
+	display: flex;
+	width: auto;
+	flex-wrap: column;
+	clear: right
+}
+.one {
+	display: flex;
+	width: 1000px;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+.two {
+	float: right;
+	background-color: rgb(255, 181, 0);
+	width: 350px;
+	height: 480px;
+	padding: 15px;
+	border: 15px;
+	border-style: dotted;
+	border-color: rgb(171, 4, 82);
+	margin-right: 10px;
+}
+img {
+	width: 100%;
 }
