--- a/css/styles.scss
+++ b/css/styles.scss
@@ -27,8 +27,8 @@ p {
 	color: rgb(171, 4, 82);
 	background-color: rgb(255, 181, 0);
 	padding: 15px;
-	border: 7px;
-	border-style: dotted;
+	border: 5px;
+	border-style: double;
 	border-color: rgb(171, 4, 82);
 	width: 750px;
 	height: auto;
