--- a/css/styles.scss
+++ b/css/styles.scss
@@ -56,14 +56,14 @@ article {
 section {
 	display: flex;
 	width: auto;
-	flex-wrap: column;
-	clear: right
+	flex-direction: row;
+	clear: right;
 }
 .one {
 	display: flex;
 	width: 1000px;
-	flex-wrap: wrap;
-	justify-content: center;
+	flex-direction: column;
+	margin-left: 100px;
 }
 .two {
 	float: right;
